assets/sass/main.scss
/* ... */
.post-holder {
    width:100%;
    height: 100%;
    background: #f2efe8;
    position: relative;
}
.post-holder:nth-of-type(odd) {
    background: #0099cc;
    color: white;
}

/* Every post, on every page, gets this style on its <article> tag */
.post {
    position: relative;
    width: 80%;
    max-width: 700px;
    margin: 0rem auto;
    padding-bottom: 4rem;
    padding-top: 4rem;
    height: 70%;
    word-break: break-word;
    hyphens: auto;
}

.post img {
  display: block;
  max-width: 100%;
  margin: 0 auto;
}

/* Add a little circle in the middle of the border-bottom on our .post
   just for the lolz and stylepoints. */

.fixed-nav {
    opacity: 0;
    position: fixed;
    top: 40px;
    left: 2%;
    z-index: 99999 !important;
    font-family: 'Open Sans Condensed', sans-serif;
    text-transform: uppercase;
    font-size: 1.5rem;
    line-height: 130%;
    font-weight: bold;

    transition: opacity 0.4s ease-in-out;
}
a.fn-item {
    display: block;
    cursor: pointer;
    opacity: 0.7;
    text-decoration: none;
}
.white {
    color: white;
}
a.fn-item:hover {
    color: #9fd067;
}
a.fn-item.active {
    color: #86c440;
    opacity: 1;

}

.post-after {
    position: absolute;
    bottom: -40px;
    right: 6%;
    z-index: 1;
    width: 0; 
    height: 0; 
    border-left: 60px solid transparent;
    border-right: 60px solid transparent;
    border-top: 50px solid #0099cc;
    border-radius: 25px;
}
.post-holder:nth-child(even) > .post-after {
    left: 6%;
    border-top-color: #f2efe8;
}

.post-title {
    margin:0;
}

.post-title a {
    text-decoration: none;
}

.post-excerpt p {
    margin: 1.6rem 0 0 0;
    font-size: 0.9em;
    line-height: 1.6em;
}

.post-meta {
    display: inline-block;
    margin: 0 0 5px 0;
    font-family: 'Open Sans', sans-serif;
    font-size: 1.5rem;
    color: #9EABB3;
}

.post-meta a {
    color: #9EABB3;
    text-decoration: none;
}

.post-meta a:hover {
    text-decoration: underline;
}

.user-meta {
    position: relative;
    padding: 0.3rem 40px 0 100px;
    min-height: 77px;
}

.user-image {
    position: absolute;
    top: 0;
    left: 0;
}

.user-name {
    display: block;
    font-weight: bold;
}

.user-bio {
    display: block;
    max-width: 440px;
    font-size: 1.4rem;
    line-height: 1.5em;
}

.publish-meta {
    position: absolute;
    top: 0;
    right: 0;
    padding: 4.3rem 0 4rem 0;
    text-align: right;
}

.publish-heading {
    display: block;
    font-weight: bold;
}

.publish-date {
    display: block;
    font-size: 1.4rem;
    line-height: 1.5em;
}



/* ==========================================================================
   5. Third Party Elements - Embeds from other services
   ========================================================================== */

/* Github */

.gist table {
    margin: 0;
    font-size: 1.4rem;
}

.gist .line-number {
    min-width: 25px;
    font-size: 1.1rem;
}



/* ==========================================================================
   6. Footer - The bottom of every page
   ========================================================================== */

.site-footer {
    position: relative;
    margin: 0rem 0 0 0;
    padding: 1rem 0;
    font-family: 'Open Sans', sans-serif;
    font-size: 1.3rem;
    line-height: 1.5em;
    color: #BBC7CC;
    text-align: center;
    background: #22343A;
}

.site-footer a {
    color: #BBC7CC;
    text-decoration: underline;
}

.site-footer a:hover {
    color: #50585D;
}

.poweredby .i-ghost {
    font-weight: 700;
    text-decoration: none;
}

.poweredby .i-ghost:hover {
    text-decoration: none;
}

.poweredby .i-ghost:before {
    font-size: 1rem;
    margin-right: 0.2em;
}

/* The subscribe icon on the footer */
.subscribe {
    width: 28px;
    height: 28px;
    position: absolute;
    top: -14px;
    left: 50%;
    margin-left: -15px;
    border: #EBF2F6 1px solid;
    text-align: center;
    line-height: 2.4rem;
    border-radius: 50px;
    background: #fff;
    transition: box-shadow 0.5s;
}

/* The RSS icon, inserted via icon font */
.subscribe:before {
    color: #D2DEE3;
    font-size: 10px;
    position: absolute;
    top: 2px;
    left: 9px;
    font-weight: bold;
    transition: color 0.5s ease;
}

/* Add a box shadow to on hover */
.subscribe:hover {
    box-shadow: rgba(0,0,0,0.05) 0 0 0 3px;
    transition: box-shadow 0.25s;
}

.subscribe:hover:before {
    color: #50585D;
}

/* CSS tooltip saying "Subscribe!" - initially hidden */
.tooltip {
    opacity:0;
    display: inline-block;
    padding: 4px 8px 5px 8px;
    position:absolute;
    top: -23px;
    left: -23px;
    color: rgba(255,255,255,0.9);
    font-size: 1.1rem;
    font-weight: bold;
    line-height: 1em;
    text-align: center;
    background: #50585D;
    border-radius:20px;
    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
    transition: opacity 0.3s ease, top 0.3s ease;
}

/* The little chiclet arrow under the tooltip, pointing down */
.tooltip:after {
    content:"";
    border-width:5px 5px 0 5px;
    border-style:solid;
    border-color: #50585D transparent;
    display:block;
    position:absolute;
    bottom:-4px;
    left:50%;
    margin-left:-5px;
    z-index: 220;
    width:0;
}

/* On hover, show the tooltip! */
.subscribe:hover .tooltip {
    opacity: 1;
    top: -33px;
}
/* ... */

